--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -7,8 +7,22 @@ line-height: 22px;
 letter-spacing: 0em;
 text-align: center;
 width: 360px;
-margin-left: 400px;
-margin-top: 32px;
-margin-bottom: 0;
+margin: 32px auto 0;
 
+
+}
+
+
+
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .cover__subtitle {
+ 
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+font-weight: 400;
+line-height: 16px;
+letter-spacing: 0em;
+text-align: center;
+    }
 }
