--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,14 +1,39 @@
 .cover__title {
 font-size: 72px;
-font-style: normal;
 font-weight: 900;
 line-height: 76px;
 letter-spacing: 0em;
 width: 560px;
-margin-left: 300px;
-margin-top: 195px;
-margin-bottom: 0;
+margin: 195px auto 0;
 text-align: center;
 
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .cover__title {
+        
+        
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .cover__title {
+    
+        
+        
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .cover__title {
+        font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 900;
+line-height: 35px;
+letter-spacing: 0em;
+text-align: center;
+
+        
+    }
 }
 
