--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -2,5 +2,7 @@
     display: flex;
     flex-direction: row;
     margin-bottom: 24px;
+    margin-top: 0;
     list-style-type: none;
+    padding: 0;
 }
