--- a/blocks/header/__column/header__column.css
+++ b/blocks/header/__column/header__column.css
@@ -1,5 +1,28 @@
 .header__column {
-    margin-left: 48px;
-    margin-top: 28px;
-    padding-top: 0;
+    
+}
+
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+     {
+    
+        margin: 0 48px 0;
+        
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+     {
+    
+        margin: 0;
+        
+    }
+}
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .header__column {
+        margin-left: 16px;
+        margin-top: 28px;
+        padding-top: 0;
+        
+    }
 }
