--- a/blocks/header/__columns/header__columns.css
+++ b/blocks/header/__columns/header__columns.css
@@ -2,5 +2,10 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-right: 48px;
+}
+
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .header__columns {
+        margin-right: 16px;
+    }
 }
