--- a/blocks/header/__lang-links/header__lang-links.css
+++ b/blocks/header/__lang-links/header__lang-links.css
@@ -2,4 +2,7 @@
     list-style-type: none;
     display: flex;
     flex-direction: row;
+    margin-top: 46px;
+    margin-bottom: 0;
+    padding: 0;
 }
