--- a/blocks/intro/__list/_text/intro__list_text.css
+++ b/blocks/intro/__list/_text/intro__list_text.css
@@ -1,11 +1,11 @@
-.footer__copyright {
+.intro__list_text {
     margin-top: 0;
-    margin-bottom: 24px;
     font-family: Inter;
-    font-size: 14px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 16px;
+    line-height: 18px;
     letter-spacing: 0em;
-    text-align: right;
+    text-align: left;
+padding: 0;
 }
