--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,11 +1,46 @@
 .intro__list {
-    margin-top: 0;
-    margin-left: 115px;
-font-size: 12px;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
-list-style-type: none;
-padding: 0;
-
+    padding: 0;
+    list-style-type: none;
+    
 }
+
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .intro__list   {
+    
+        max-width: 690px;
+        
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .intro__list   {
+    
+         max-width: 720px;
+        
+ }
+ }
+ 
+ 
+ @media screen and (max-width: 768px) and (min-width: 425px) {
+    .intro__list  {
+          max-width: 425px;
+          
+  }
+ 
+ @media screen and (max-width: 425px) and (min-width: 320px) {
+    .intro__list   {
+     
+        max-width: 288px;
+        margin-left: 34px 0 0;
+ }
+ }
+ 
+ 
+ 
+ 
+ @media screen and (max-width: 320px) and (min-width: 100px) {
+    .intro__list  {
+         max-width: 100px;
+     }
+ }
