--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,11 +1,45 @@
 .intro__title {
-    margin-top: 92px;
-    margin-left: 228px;
-font-size: 54px;
+    
+    font-family: Inter;
+    font-size: 54px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 58px;
+    letter-spacing: 0em;
+    text-align: left;    
+}
 
-font-weight: 900;
-line-height: 58px;
-letter-spacing: 0em;
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .intro__title {
+        max-width: 928px;
+        margin-left: 0px;
+    
+        
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .intro__title {
+        max-width: 720px;
+        margin-left: 0px;
+        margin-bottom: 33px;
+        
+    }
+}
 
 
+
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .intro__title {
+         max-width: 425px;
+         margin: 64 0px 0;
+     }
+ }
+
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .intro__title {
+    
+        max-width: 288px;
+        margin-left: 0px;
+}
 }
