--- a/blocks/lead/__img/lead__img.css
+++ b/blocks/lead/__img/lead__img.css
@@ -1,7 +1,34 @@
 .lead__img {
-    background-image: url(/russian-travel/images/lead-polka.jpg);
-    background-size: contain;
-    width: 984px;
-    height: 615px;
-    margin: auto;
+    width: 100%;
+    
+
+}
+
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .lead__img  {
+        width: 100%;
+    
+        
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .lead__img  {
+   
+        width: 100%;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .lead__img  {
+    
+        width: 100%;
+}
+}
+
+
+@media screen and (max-width: 320px) and (min-width: 100px) {
+    .lead__img  {
+        width: 100%;
+    }
 }
