--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,14 +1,48 @@
 .lead__subtitle {
-width: 640px;
-height: 72px;
-line-height: 36px;
-/* or 120% */
-margin: auto;
-margin-top: 32px;
-margin-bottom: 64px;
-text-align: center;
-font-weight: 400;
-font-size: 30px;
-line-height: 36px; 
+    width: 640px;
+    line-height: 36px;
+    /* or 120% */
+    margin: auto;
+    margin-top: 32px;
+    margin-bottom: 64px;
+    font-style: normal;
+    text-align: center;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 36px;
 
+}
+
+
+
+
+
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .lead__subtitle {
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0em;
+        text-align: center;
+        width: 288px;
+        margin-bottom: 40px;
+
+    }
+}
+
+@media screen and (max-width: 320px) and (min-width: 50px) {
+    .lead__subtitle {
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 20px;
+        letter-spacing: 0em;
+        text-align: center;
+        width: 288px;
+        object-fit: cover;
+        margin-bottom: 40px;
+    }
 }
