--- a/blocks/photo-grid/__img/photo-grid__img.css
+++ b/blocks/photo-grid/__img/photo-grid__img.css
@@ -1,6 +1,34 @@
 .photo-grid__img {
-    width: 100%; 
-    height: 100%;
     object-fit: cover;
+    width: 100%;
+
+}
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .photo-grid__img {
+        width: 100%;
+    ;
+        
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .photo-grid__img {
+   
+        width: 100%;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .photo-grid__img {
     
+        width: 100%;
+}
+}
+
+
+@media screen and (max-width: 320px) and (min-width: 100px) {
+    .photo-grid__img {
+        width: 100%;
+        
+    }
 }
