--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,9 +1,60 @@
 .photo-grid {
-    margin: auto;
     display: grid;
-    grid-template-columns: repeat(4, 284px);
-    grid-template-rows: repeat(3, 213px);
-    margin: 92px 125px 0;
+    grid-template-columns: repeat(4, 1fr);
+    margin: 92px auto 0;
     padding-bottom: 92px;
     gap: 16px;
+    max-width: 1184px;
+}
+
+
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .photo-grid {
+        max-width: 928px;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 14px;
+        margin: 92px auto 0;
+        padding-bottom: 0px;
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .photo-grid {
+        max-width: 928px;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 16px;
+        margin: 88px auto 0;
+        padding-bottom: 0px;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .photo-grid {
+        max-width: 425px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 14px;
+        margin: 64px auto 0;
+        padding-bottom: 0px;
+    
+}
+}
+
+@media screen and (max-width: 425px) and (min-width: 288px) {
+    .photo-grid {
+        max-width: 320px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 14px;
+        margin: 64px auto 0;
+        padding-bottom: 0px;
+    
+}
+}
+
+@media screen and (max-width: 288px) {
+    .photo-grid {
+        max-width: 320px;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 14px;
+        margin: 64px auto 0;
+        padding-bottom: 0px;
+    }
 }
