--- a/blocks/place/__item/place__item.css
+++ b/blocks/place/__item/place__item.css
@@ -1,8 +1,48 @@
 .place__item {
-margin-right: 40px;
-margin-top: 0px;
+        display: flex;
+        flex-direction: column;
+margin: 0;
+width: 100%
+
 }
 
-.place__item:nth-child(2) {
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+.place__item {
+        max-width: 928px;
+        gap: 14px;
+        margin: 0 auto 0;
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+.place__item {
+        max-width: 928px;
+        gap: 16px;
+        margin: 0 auto 0;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+.place__item {
+        max-width: 720px;
+        gap: 14px;
+        margin: 0 auto 0;
     
+}
+}
+
+@media screen and (max-width: 425px) and (min-width: 288px) {
+.place__item {
+        max-width: 320px;
+        gap: 14px;
+        margin: 0 auto 0;
+    
+}
+}
+
+@media screen and (max-width: 320px) {
+.place__item {
+        max-width: 320px;
+        gap: 14px;
+        margin: 0 auto 0;
+    }
 }
