--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -7,7 +7,7 @@ line-height: 22px;
 letter-spacing: 0em;
 text-decoration: underline;
 color:#FFFFFF;
-margin-bottom: 48px;
+margin-bottom: 0;
 transition: 2s;
 }
 
