--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,14 +1,17 @@
 .place__paragraph { 
-     
-font-size: 18px;
-font-weight: 400;
-line-height: 29,34px;
-letter-spacing: 0em;
-    padding-top: 48px;
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 29px;
+    letter-spacing: 0em;
+    text-align: left;
     margin: 0;
 }
+
 
 .place__paragraph:nth-child(2) {
     padding-top: 26px;
 
 }
+
