--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,28 @@
 .place__title {
+    font-family: Inter;
     font-size: 72px;
+    font-style: normal;
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
+    text-align: left;
     margin: 0px;
-    margin-bottom: 48px;
+}
 
+
+
+
+@media screen and (max-width: 320px) {
+    .place__title {
+        max-width: 320px;
+        font-family: Inter;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 900;
+        line-height: 35px;
+        letter-spacing: 0em;
+        text-align: left;
+        margin-top: 0;
+
+    }
 }
