--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -5,6 +5,47 @@ font-weight: 400;
 line-height: 20.4px;
 letter-spacing: 2px;
 color: #AAAAAA;
-margin-top: 100px;
+margin-top: auto;
+margin-bottom: 0;
+}
 
+
+@media screen and (max-width: 1279px) and (min-width: 1023px) {
+    .place__url-heading {
+       max-width: 928px;
+        
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .place__url-heading {
+        max-width: 928px;
+        gap: 16px;
+        
+}
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .place__url-heading {
+        max-width: 425px;
+        gap: 14px;
+        
+    
+}
+}
+
+@media screen and (max-width: 425px) and (min-width: 288px) {
+    .place__url-heading {
+        max-width: 320px;
+        gap: 14px;
+        
+    
+}
+}
+
+@media screen and (max-width: 320px) {
+    .place__url-heading {
+        max-width: 320px;
+        gap: 14px;
+        
+    }
 }
