--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,63 @@
 .place {
     display: grid;
-    grid-template-columns: 460px 484px; 
+    grid-template-columns: 1fr 1fr; 
     /*grid-template-rows: 152px 460px 12px 22px 145px 203px;*/
-    margin-left: 228px;
-    gap: 40px;
-    margin-bottom: 80px;
+    margin: 0 auto 80px;
+    width: 984px;
+    grid-column-gap: 40px;
+    grid-row-gap: 48px;
+
    
+}
+
+    
+@media screen and (max-width: 1279px) and (min-width: 1024px) {
+    .place  {
+        max-width: 928px;
+        grid-template-columns: 1fr 1fr;
+        margin: 0px auto 80px;
+        grid-column-gap: 32px;
+        grid-row-gap: 48px;
+}
+}
+
+@media screen and (max-width: 1024px) and (min-width: 768px) {
+    .place  {
+        max-width: 768px;
+        grid-template-columns: 1fr 1fr; 
+        margin: 0px auto 88px;
+        grid-column-gap: 28px;
+        grid-row-gap: 48px;
+}
+}
+@media screen and (max-width: 768px) and (min-width: 425px) {
+    .place  {
+        max-width: 425px;
+        grid-template-columns: 1fr; 
+        grid-column-gap: 28px;
+        margin: 0px auto 50px;
+        grid-row-gap: 48px;
+    
+}
+}
+
+@media screen and (max-width: 425px) and (min-width: 320px) {
+    .place  {
+        max-width: 320px;
+        grid-template-columns: 1fr;
+        grid-column-gap: 50px;
+        margin: 0 auto 50px;
+        grid-row-gap: 48px;
+    
+}
+}
+
+@media screen and (max-width: 320px) {
+    .place  {
+        max-width: 288px;
+        grid-template-columns: 1fr;
+        grid-column-gap: 50px;
+        margin: 0 auto 50px;
+        grid-row-gap: 48px;
+    }
 }
