--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    background-image: url(/images/cover-trains.jpg);
+    background-image: url(images/cover-trains.jpg);
     background-repeat: no-repeat;
     height: 740px;
     width: 100%;
@@ -8,26 +8,18 @@
     color: #FFFFFF;
     max-width: 1184px;
     background-position: center;
-object-fit: cover;
+    object-fit: cover;
 }
 
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
-    .cover {
-        
-}
+    .cover {}
 }
 
 @media screen and (max-width: 1024px) and (min-width: 768px) {
-    .cover {
-        
-}
-}
-@media screen and (max-width: 768px) and (min-width: 320px) {
-    .cover {
-        
-        
-    
-}
+    .cover {}
 }
 
+@media screen and (max-width: 768px) and (min-width: 320px) {
+    .cover {}
+}
