--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,5 @@
 .cover {
-    background-image: url(images/cover-trains.jpg);
+    background-image: url(../../images/cover-trains.jpg);
     background-repeat: no-repeat;
     height: 740px;
     width: 100%;
