--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,28 +1,35 @@
 .cover__subtitle {
     font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0em;
-text-align: center;
-width: 360px;
-margin: 32px auto 0;
-
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0em;
+    text-align: center;
+    width: 360px;
+    margin: 32px auto 0;
 
 }
 
 
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 768px) and (min-width: 321px) {
     .cover__subtitle {
- 
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-font-weight: 400;
-line-height: 16px;
-letter-spacing: 0em;
-text-align: center;
+        font-size: 14px;
+        width: 288px;
+        line-height: 16px;
+        margin: 16px auto 0;
+        text-align: center;
     }
 }
+
+@media screen and (max-width: 320px) {
+    .cover__subtitle {
+        font-size: 14px;
+        width: 288px;
+        line-height: 16px;
+        margin: 16px auto 0;
+        text-align: center;
+    }
+}
+
