--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,39 +1,60 @@
 .cover__title {
-font-size: 72px;
-font-weight: 900;
-line-height: 76px;
-letter-spacing: 0em;
-width: 560px;
-margin: 195px auto 0;
-text-align: center;
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 76px;
+    letter-spacing: 0em;
+    width: 560px;
+    margin: 245px auto 0;
+    text-align: center;
 
 }
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
     .cover__title {
-        
-        
+        margin: 195px auto 0;
+
     }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
     .cover__title {
-    
-        
-        
+        margin: 115px auto 0;
+
+
     }
 }
-@media screen and (max-width: 768px) and (min-width: 320px) {
+
+@media screen and (max-width: 767px) and (min-width: 426px) {
     .cover__title {
-        font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 900;
-line-height: 35px;
-letter-spacing: 0em;
-text-align: center;
+        margin: 130px auto 0;
+        font-size: 40px;
+        width: 300px;
+        line-height: 50px;
 
-        
     }
 }
 
+@media screen and (max-width: 425px) and (min-width: 321px) {
+    .cover__title {
+        margin: 70px auto 0;
+        font-size: 40px;
+        width: 300px;
+        line-height: 35px;
+    }
+}
+
+
+
+@media screen and (max-width: 320px) {
+.cover__title {
+    width: 240px;
+    margin: 33px auto 0;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 35px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+}
