--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,25 +1,27 @@
 .cover {
     background-image: url(../../images/cover-trains.jpg);
+    background-size: contain;
     background-repeat: no-repeat;
-    height: 740px;
-    width: 100%;
+    height: 62.5vw;
+    width: 92.5vw;
     margin: auto;
     position: relative;
-    color: #FFFFFF;
     max-width: 1184px;
-    background-position: center;
-    object-fit: cover;
+    max-height: 740px;
+
+    
 }
 
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-    .cover {}
+@media screen and (max-width: 1279px) and (min-width: 321px) {
+    .cover {
+        width: 100%;
+    }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
-    .cover {}
+@media screen and (max-width: 320px) {
+    .cover {
+        width: 100%;
+    }
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
-    .cover {}
-}
