--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,7 +1,33 @@
 .footer__columns {
-    display: flex;
-    flex-direction: row;
+ display: flex; 
+    flex-direction: row; 
     margin-top: 92px;
     justify-content: space-between;
 }
 
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+    .footer__columns {
+        
+        margin-top: 88px;
+        
+    }
+    }
+
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+.footer__columns {
+    display: flex;
+    flex-direction: column;
+    margin-top: 64px;
+    
+}
+}
+
+@media screen and (max-width: 319px) {
+    .footer__columns {
+        display: flex;
+        flex-direction: column;
+        margin-top: 64px;
+        
+    }
+    }
