--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,3 +9,25 @@
     letter-spacing: 0em;
     text-align: right;
 }
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+    .footer__copyright {
+        text-align: left;
+        margin: 48px 0 24px;
+        font-size: 14px;
+
+        line-height: 16px;
+
+    }
+}
+
+@media screen and (max-width: 319px) {
+    .footer__copyright {
+        text-align: left;
+        margin: 48px 0 24px;
+        font-size: 14px;
+
+        line-height: 16px;
+
+    }
+}
