--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,18 +1,40 @@
 .footer__link {
-    margin-right: 18px;
-  color:#FFFFFF;
+  margin-right: 18px;
+  color: #FFFFFF;
   text-decoration: none;
   font-family: Inter;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 18px;
-letter-spacing: 0em;
-text-align: left;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: left;
 
 }
 
 .footer__link:hover {
   color: #DADADA;
 
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+  .footer__link {
+
+    font-size: 24px;
+
+    line-height: 24px;
+
+
+  }
+}
+
+@media screen and (max-width: 319px) {
+  .footer__link {
+
+    font-size: 24px;
+
+    line-height: 24px;
+
+
+  }
 }
