--- a/blocks/header/__columns/header__columns.css
+++ b/blocks/header/__columns/header__columns.css
@@ -2,10 +2,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    padding-top: 28px;
 }
 
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 767px) and (min-width: 320px) {
     .header__columns {
-        margin-right: 16px;
+        padding-top: 16px;
     }
 }
