--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -4,49 +4,33 @@
 }
 
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
+@media screen and (max-width: 1279px) and (min-width: 768px) {
     .header {
-        max-width: 928px;
-        margin: auto;
+        margin-left: 48px;
+        margin-right: 48px;
     
-    
-        
-    }
-}
-
-@media screen and (max-width: 1024px) and (min-width: 768px) {
-    .header {
-        max-width: 720px;
-        margin: auto;
-        
-        
     }
 }
 
 @media screen and (max-width: 768px) and (min-width: 425px) {
     .header {
-        max-width: 500px;
-        margin: auto;
+        
+        margin-left: 24px;
+        margin-right: 24px;
+        
+    }
+}
+
+@media screen and (max-width: 767px) and (min-width: 320px) {
+    .header {
+
+        margin-left: 16px;
+        margin-right: 16px;
+        
     
         
     }
 }
 
-@media screen and (max-width: 425px) and (min-width: 320px) {
-    .header  {
-     
-         max-width: 320px;
-         margin: auto;
- }
- }
- 
 
-
-
-@media screen and (max-width: 320px) {
-    .header {
-        max-width: 320px;
-        margin: auto;
-    }
-}
 
