--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,46 +1,6 @@
 .intro__list {
     padding: 0;
     list-style-type: none;
+    min-width: 288px;
     
 }
-
-
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
-    .intro__list   {
-    
-        max-width: 690px;
-        
-    }
-}
-
-@media screen and (max-width: 1024px) and (min-width: 768px) {
-    .intro__list   {
-    
-         max-width: 720px;
-        
- }
- }
- 
- 
- @media screen and (max-width: 768px) and (min-width: 425px) {
-    .intro__list  {
-          max-width: 425px;
-          
-  }
- 
- @media screen and (max-width: 425px) and (min-width: 320px) {
-    .intro__list   {
-     
-        max-width: 288px;
-        margin-left: 34px 0 0;
- }
- }
- 
- 
- 
- 
- @media screen and (max-width: 320px) and (min-width: 100px) {
-    .intro__list  {
-         max-width: 100px;
-     }
- }
