--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,52 +1,30 @@
 .intro {
     max-width: 984px;
-    margin: 92px auto 0;
-    margin-top: 92px;
+    margin: 92px auto 92px;
+
 }
 
 
-@media screen and (max-width: 1279px) and (min-width: 1024px) {
+@media screen and (max-width: 1024px) and (min-width: 769px) {
     .intro {
-        max-width: 690px;
-        margin-left: 148px;
-
-
-
+        width: 690px;
+        margin: 88px 48px 88px;
     }
-}
-
-
-
-
-@media screen and (max-width: 1024px) and (min-width: 768px) {
-   .intro  {
-   
-        max-width: 720px;
-        margin-left: 48px;
-}
 }
 
 
 @media screen and (max-width: 768px) and (min-width: 425px) {
-    .intro  {
-         max-width: 720px;
-         margin-left: 24px;
-     }
- }
-
-@media screen and (max-width: 425px) and (min-width: 320px) {
-   .intro  {
-    
-        max-width: 288px;
-        margin-left: 16px;
-}
-}
-
-
-
-
-@media screen and (max-width: 320px) and (min-width: 100px) {
-   .intro  {
-        max-width: 100px;
+    .intro {
+        width: calc(100% - 24px * 2);
+    margin: 88px 24px 0;
     }
 }
+
+@media screen and (max-width: 425px) {
+    .intro {
+        width: calc(100% - 16px * 2);
+        margin: 64px 16px 0;
+        
+    }
+}
+
