--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,10 +1,8 @@
 .lead__subtitle {
-    width: 640px;
+    width: 494px;
     line-height: 36px;
     /* or 120% */
-    margin: auto;
-    margin-top: 32px;
-    margin-bottom: 64px;
+    margin: 32px auto 64px;
     font-style: normal;
     text-align: center;
     font-weight: 400;
@@ -13,36 +11,22 @@
 
 }
 
-
-
-
-
-@media screen and (max-width: 768px) and (min-width: 320px) {
+@media screen and (max-width: 1024px) and (min-width: 768px) {
     .lead__subtitle {
-        font-family: Inter;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 20px;
-        letter-spacing: 0em;
-        text-align: center;
-        width: 288px;
-        margin-bottom: 40px;
+        
+        margin-bottom: 56px;
 
     }
 }
 
-@media screen and (max-width: 320px) and (min-width: 50px) {
+@media screen and (max-width: 524px){
     .lead__subtitle {
-        font-family: Inter;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 20px;
-        letter-spacing: 0em;
-        text-align: center;
+
         width: 288px;
-        object-fit: cover;
+        margin-top: 16px;
         margin-bottom: 40px;
+        font-size: 16px;
+        line-height: 20px;
     }
 }
+
