--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,60 +1,66 @@
 .photo-grid {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(4, minmax(284px, 352px));
     margin: 92px auto 0;
     padding-bottom: 92px;
     gap: 16px;
     max-width: 1184px;
+    /* width: calc(100% - 2 * 16px); */
 }
 
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
     .photo-grid {
-        max-width: 928px;
+        /* max-width: 1279px; */
         grid-template-columns: repeat(3, 1fr);
         gap: 14px;
         margin: 92px auto 0;
-        padding-bottom: 0px;
+        padding-bottom: 92px;
+        width: calc(100% - 2 * 48px);
 }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 1023px) and (min-width: 768px) {
     .photo-grid {
-        max-width: 928px;
+        /* max-width: 1023px; */
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
         margin: 88px auto 0;
-        padding-bottom: 0px;
+        padding-bottom: 88px;
+        width: calc(100% - 2 * 24px);
 }
 }
-@media screen and (max-width: 768px) and (min-width: 425px) {
+@media screen and (max-width: 767px) and (min-width: 425px) {
     .photo-grid {
-        max-width: 425px;
-        grid-template-columns: repeat(1, 1fr);
+        /* max-width: 767px; */
+        grid-template-columns: repeat(2, 1fr);
         gap: 14px;
         margin: 64px auto 0;
-        padding-bottom: 0px;
+        padding-bottom: 88px;
+        width: calc(100% - 2 * 16px);
     
 }
 }
 
-@media screen and (max-width: 425px) and (min-width: 288px) {
+@media screen and (max-width: 424px) and (min-width: 320px) {
     .photo-grid {
-        max-width: 320px;
+        /* max-width: 424px; */
         grid-template-columns: repeat(1, 1fr);
-        gap: 14px;
+        gap: 12px;
         margin: 64px auto 0;
-        padding-bottom: 0px;
+        padding-bottom: 64px;
+        width: calc(100% - 2 * 16px);
     
 }
 }
 
-@media screen and (max-width: 288px) {
+@media screen and (max-width: 320px) {
     .photo-grid {
-        max-width: 320px;
+        /* max-width: 288px; */
         grid-template-columns: repeat(1, 1fr);
-        gap: 14px;
+        gap: 12px;
         margin: 64px auto 0;
-        padding-bottom: 0px;
+        padding-bottom: 64px;
+        width: calc(100% - 2 * 16px);
     }
 }
