--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,18 +1,33 @@
 .place__link {
-    
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 22px;
-letter-spacing: 0em;
-text-decoration: underline;
-color:#FFFFFF;
-margin-bottom: 0;
-transition: 2s;
+
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0em;
+  text-decoration: underline;
+  color: #FFFFFF;
+  margin-bottom: 0;
+  transition: 2s;
+  margin-top: 12px;
 }
 
 .place__link:hover {
-    opacity: 80%;
+  opacity: 80%;
   transition: 2s;
 }
 
+@media screen and (max-width: 425px) and (min-width: 288px) {
+  .place__link {
+
+    margin-left: 16px;
+
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__link {
+
+    margin-left: 16px;
+  }
+}
