--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,4 +1,4 @@
-.place__paragraph { 
+.place__paragraph {
     font-family: Inter;
     font-size: 18px;
     font-style: normal;
@@ -15,3 +15,31 @@
 
 }
 
+
+@media screen and (max-width: 767px) and (min-width: 425px) {
+    .place__paragraph {
+        font-family: Inter;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 26px;
+        
+
+    }
+}
+
+@media screen and (max-width: 424px) and (min-width: 320px) {
+    .place__paragraph {
+        
+        margin-left: 16px;
+
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__paragraph {
+        
+        margin-left: 16px;
+
+    }
+}
