--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,46 +1,31 @@
 .places {
-    max-width: 984px;
-    margin: auto;
+    margin-bottom: 92px;
+    margin: 0;
 }
 
 
-@media screen and (max-width: 1279px) and (min-width: 1023px) {
-    .places {
-        max-width: 928px;
-        gap: 14px;
-        margin: 92px auto 92px;
+@media screen and (max-width: 1023px) and (min-width: 768px) {
+    .places  {
+        margin-bottom: 90px;
+        
+}
+}
+@media screen and (max-width: 767px) and (min-width: 425px) {
+    .places  {
+        margin-bottom: 66px;
 }
 }
 
-@media screen and (max-width: 1024px) and (min-width: 768px) {
+@media screen and (max-width: 424px) and (min-width: 320px) {
     .places {
-        max-width: 768px;
-        gap: 16px;
-        margin: 92px auto 92px;
-}
-}
-@media screen and (max-width: 768px) and (min-width: 425px) {
-    .places {
-        max-width: 425px;
-        gap: 14px;
-        margin: 64px auto 66px;
-    
-}
-}
-
-@media screen and (max-width: 425px) and (min-width: 288px) {
-    .places {
-        max-width: 320px;
-        gap: 14px;
-        margin: 64px auto 66px;
-    
+        
+        margin-bottom: 66px;
 }
 }
 
 @media screen and (max-width: 320px) {
     .places {
-        max-width: 320px;
-        gap: 14px;
-        margin: 64px auto 66px;
+        margin-bottom: 66px;
+        
     }
 }
