--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,18 +1,18 @@
  .cover__overlay { 
     position: absolute;
     top: 0;
-    left: 0;
     right: 0;
+    left: 0;
     bottom: 0;
     background-color: rgba(15, 14, 15, 0.3);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
-    background-repeat: no-repeat;
     margin: auto;
     max-width: 1184px;
     transition: 1s;
     color:#FFFFFF;
   text-decoration: none;
+  
 }
 
 .cover__overlay:hover { 
