--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,8 +6,8 @@
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
     .lead {
-        max-width: 928px;
-        margin: auto;
+        max-width: 100%;
+        
     
         
     }
@@ -16,7 +16,7 @@
 @media screen and (max-width: 1023px) and (min-width: 320px) {
     .lead {
         max-width: 100%;
-        margin: auto;
+        
         
     }
 }
