--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,5 +2,12 @@
     padding: 0;
     list-style-type: none;
     min-width: 288px;
+    margin-top: 0;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    padding: 0;
     
 }
