--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,8 +5,13 @@
     line-height: 22px;
     letter-spacing: 0em;
     text-align: center;
-    width: 360px;
-    margin: 32px auto 0;
+    max-width: 360px;
+    /* margin: 16px auto 0; */
+    color:#FFFFFF;
+    /* text-decoration: none; */
+    /* color:rgba(255, 255, 255, 1); */
+    margin: 16px 0 0;
+
 
 }
 
@@ -17,7 +22,8 @@
         font-size: 14px;
         width: 288px;
         line-height: 16px;
-        margin: 16px auto 0;
+        /* margin: 16px auto 0; */
+        margin: 0;
     }
 }
 
@@ -26,8 +32,8 @@
         font-size: 14px;
         width: 288px;
         line-height: 16px;
-        margin: 16px auto 0;
-        
+        /* margin: 16px auto 0; */
+        margin: 0;
     }
 }
 
