--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,28 +3,37 @@
     font-weight: 900;
     line-height: 76px;
     letter-spacing: 0em;
-    width: 560px;
-    margin: 245px auto 0;
+    max-width: 560px;
+    /* margin: 245px auto 0; */
     text-align: center;
+    /* text-decoration: none; */
+    color:rgba(255, 255, 255, 1);
+    margin: 0 0 16px; 
+    /* padding-bottom: 36px; */
+    /* margin: 0; */
+
 }
+
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
     .cover__title {
-        margin: 195px auto 0;
+        /* margin: 195px auto 0; */
+        
 
     }
 }
 
 @media screen and (max-width: 1023px) and (min-width: 768px) {
     .cover__title {
-        margin: 115px auto 0;
+        /* margin: 115px auto 0; */
+        margin-bottom: 32px;
 
     }
 }
 
 @media screen and (max-width: 767px) and (min-width: 426px) {
     .cover__title {
-        margin: 130px auto 0;
+        /* margin: 130px auto 0; */
         font-size: 40px;
         width: 300px;
         line-height: 50px;
@@ -34,7 +43,7 @@
 
 @media screen and (max-width: 425px) and (min-width: 321px) {
     .cover__title {
-        margin: 70px auto 0;
+        /* margin: 70px auto 0; */
         font-size: 40px;
         width: 300px;
         line-height: 35px;
@@ -46,7 +55,7 @@
 @media screen and (max-width: 320px) {
     .cover__title {
         width: 240px;
-        margin: 33px auto 0;
+        /* margin: 33px auto 0; */
         font-size: 32px;
         line-height: 35px;
 
