--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,13 +3,17 @@
     color: #FFFFFF;
     margin-left: 18px;
     font-size: 24px;
-    font-style: normal;
     font-weight: 400;
     line-height: 28px;
     letter-spacing: 0em;
     text-align: right;
 }
 
-.header__lang-link:hover {
-    text-decoration: underline;
+
+
+@media screen and (max-width: 320px) {
+    .header__lang-link {
+        font-size: 18px;
+    line-height: 20px;
+    }
 }
