--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -6,7 +6,8 @@
 
 @media screen and (max-width: 1279px) and (min-width: 1024px) {
     .lead {
-        max-width: 100%;
+        max-width: 928px;
+        
         
     
         
