--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -8,12 +8,22 @@
     margin: 0px;
 }
 
-@media screen and (max-width: 768px) and (min-width: 425px) {
+@media screen and (max-width: 768px) and (min-width: 638px) {
     .place__title {
 
         font-size: 42px;
         line-height: 46px;
         margin-top: 0;
+
+    }
+}
+
+@media screen and (max-width: 637px) and (min-width: 425px) {
+    .place__title {
+
+        font-size: 42px;
+        line-height: 46px;
+        margin-left: 16px;
 
     }
 }
