--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -23,12 +23,20 @@ margin-bottom: 0;
         
 }
 }
-@media screen and (max-width: 768px) and (min-width: 425px) {
+@media screen and (max-width: 768px) and (min-width: 638px) {
     .place__url-heading {
         max-width: 425px;
         
     
 }
+}
+
+@media screen and (max-width: 637px) and (min-width: 425px) {
+    .place__url-heading {
+        max-width: 425px;
+        margin-left: 16px;
+
+    }
 }
 
 @media screen and (max-width: 424px) and (min-width: 288px) {
